# UniNote

./: .gitignore  Cargo.toml  README.md
docs/: sidecar-contract.md
sidecars/uninote-sync-gtasks/: Cargo.toml  README.md
sidecars/uninote-sync-gtasks/src/: creds_store.rs  gtasks.rs  main.rs  model.rs  oauth.rs  state.rs  sync.rs  token_store.rs
sidecars/uninote-sync-todoist/: Cargo.toml  README.md
sidecars/uninote-sync-todoist/src/: dpapi.rs  main.rs  model.rs  state.rs  sync.rs  todoist.rs  token_store.rs
src/: app.rs  main.rs  storage.rs
uninote/: Cargo.toml
uninote/src/: app.rs  model.rs  settings.rs  storage.rs
