[package]
name = "uninote"
version = "0.1.0"
edition = "2021"
description = "UniNote Desktop - integrated task & note app"

[[bin]]
name = "uninote"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rfd = { version = "0.14", default-features = false, features = ["common-controls-v6"] }
