[package]
name = "uninote-sync-gtasks"
version = "0.1.0"
edition = "2021"
description = "UniNote sidecar adapter for Google Tasks"

[[bin]]
name = "uninote-sync-gtasks"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }
